--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer{
-    height: 300px;
+    min-height: 300px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -7,9 +7,19 @@
     background: #fff;
 }
 
+.main_one{
+    display: flex;
+    gap: 4rem;
+}
+
+.main_two{
+    display: flex;
+    gap: 4rem;
+}
+
 .footer_first{
     width: 300px;
-    height: 200px;
+    min-height: 200px;
     padding-right: 20px;
 }
 
@@ -41,7 +51,7 @@
 
 .footer_second{
     margin-left: 20px;
-    height:200px;
+    min-height:200px;
 }
 
 .footer_second p{
@@ -55,7 +65,7 @@
 }
 
 .footer_third{
-    height: 200px;
+    min-height: 200px;
     margin-left: 25px;
 }
 
@@ -64,7 +74,7 @@
 }
 
 .footer_fourth{
-    height: 200px;
+    min-height: 200px;
     width: 250px;
 }
 
@@ -105,4 +115,80 @@
 .footer_fourth button:hover {
     box-shadow: 0 10px 15px 0 rgb(255 83 48 / 50%);
     background-color: #fa4226;
+}
+
+@media (max-width:920px){
+    .footer{
+        padding: 50px 30px;
+    }
+
+    .main_one{
+        display: flex;
+        flex-direction: column;
+        height: 600px;
+        width: 100%;
+    }
+
+    .main_two{
+        display: flex;
+        flex-direction: column;
+        height: 600px;
+        width: 100%;
+    }
+
+    .footer_second{
+        margin-left: 0;
+    }
+
+    .footer_third{
+        margin-left: 0;
+    }
+
+    .footer_fourth{
+        margin-top: 20px;
+        width: 100%;
+    }
+}
+
+@media (max-width:480px){
+    .footer{
+        padding: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 3rem;
+        text-align: center;
+    }
+    .main_one{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main_two{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer_first{
+        padding-right: 0;
+    }
+    
+    .footer_first_contact p{
+        display: flex;
+        align-items:center;
+        justify-content: center;
+    }
+
+    .footer_second{
+        margin-left: 0;
+    }
+
+    .footer_third{
+        margin-left: 0;
+    }
+
+    .footer_fourth{
+        margin-left: 0;
+        width: 100%;
+    }
 }
