--- a/components/Home/ChooseUs/ChooseUs.module.css
+++ b/components/Home/ChooseUs/ChooseUs.module.css
@@ -7,6 +7,7 @@
     text-align: center;
 }
 
+
 .choose_main {
     display: flex;
     gap: 10rem;
@@ -19,7 +20,7 @@
 .choose_text h1{
     margin: 10px 0;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .choose_text h3{
@@ -71,4 +72,91 @@
 
 .content p{
     color: #706F7B;
+}
+
+@media (max-width:920px){
+    .choose{
+        text-align: center;
+    }
+    .main_img img{
+        width: 700px;
+        height: 300px;
+    }
+    .choose_main{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 4rem;
+    }
+
+    .choose_text{
+        width: 100%;
+    }
+
+    .choose_text h1{
+        padding: 0 100px;
+    }
+
+    .choose_text p{
+        padding: 0 100px;
+    }
+
+    .detail_btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .content{
+        width: 100%;
+        padding: 0 100px;
+    }
+}
+
+@media (max-width:468px){
+    .choose{
+        text-align: center;
+        padding: 100px 50px 50px 50px;
+    }
+    .main_img img{
+        width: 400px;
+        height: 180px;
+        margin-left: -40px;
+    }
+    .choose_main{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 4rem;
+    }
+
+    .choose_text{
+        width: 100%;
+    }
+
+    .choose_text h3{
+        font-size: 20px;
+    }
+
+    .choose_text h1{
+        padding: 0;
+    }
+
+    .choose_text p{
+        padding: 0;
+    }
+
+    .detail_btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .content{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 30px;
+    }
 }
