--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -17,6 +17,11 @@
     cursor: pointer;
 }
 
+.links a{
+    text-decoration: none;
+    color: #000;
+}
+
 .links ul{
     display: flex;
     justify-content: space-evenly;
