--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,10 +1,11 @@
 .contact{
     margin-top: 140px;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 0 70px;
+    margin-bottom: 50px;
 }
 
 .contact_text{
@@ -54,6 +55,7 @@
     flex-direction: column;
 }
 
+
 .form_container form label{
     font-size: 20px;
     font-weight: 600;
@@ -61,6 +63,15 @@
 }
 
 .form_container form input{
+    padding: 20px 20px;
+    font-size: 20px;
+    background: #F2F2F2;
+    border: none;
+    outline: none;
+    margin-top: 10px;
+}
+
+.form_container form textarea{
     padding: 20px 20px;
     font-size: 20px;
     background: #F2F2F2;
@@ -83,7 +94,7 @@
     border: none;
     color: #fff;
     padding: 20px 0;
-    margin-top: 20px;
+    margin-top: 25px;
     background-color: #FF4D30;
     box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
     transition: all 0.3s;
@@ -95,3 +106,106 @@
     background-color: #fa4226;
 }
 
+@media (max-width:920px){
+    .contact{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+    .contact_text p{
+        width: 100%;
+    }
+    .contact_icon span{
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (max-width:468px){
+    
+    .contact_text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 450px;
+        text-align: center;
+    }
+    
+    .contact_text h1{
+        width: 400px;
+        font-size: 40px;
+    }
+    
+    .contact_text p{
+        color: #848484;
+        margin: 30px 0;
+        width: 400px;
+        font-size: 20px;
+    }
+    
+    
+    .form_container{
+        min-height: 450px;
+        padding: 0 15px;
+        width: 400px;
+    }
+    
+    .form_container form{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+    .form_container form label{
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 25px;
+    }
+    
+    .form_container form input{
+        padding: 20px 20px;
+        font-size: 20px;
+        background: #F2F2F2;
+        border: none;
+        outline: none;
+        margin-top: 10px;
+    }
+    
+    .form_container form textarea{
+        padding: 20px 20px;
+        font-size: 20px;
+        background: #F2F2F2;
+        border: none;
+        outline: none;
+        margin-top: 10px;
+    }
+    
+    .form_container form label span{
+        color: #FF4D30;
+    }
+    
+    .form_container button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        font-size: 20px;
+        font-weight: 500;
+        border: none;
+        color: #fff;
+        padding: 20px 0;
+        margin-top: 25px;
+        background-color: #FF4D30;
+        box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
+        transition: all 0.3s;
+        cursor: pointer;
+    }
+    
+    .form_container button{
+        box-shadow: 0 10px 15px 0 rgb(255 83 48 / 50%);
+        background-color: #fa4226;
+    }
+
+}
