--- a/components/Home/PickCar/common.module.css
+++ b/components/Home/PickCar/common.module.css
@@ -1,5 +1,5 @@
 .pick_section{
-    height: 100vh;
+    min-height: 100vh;
     padding: 0 20px 0 20px;
 }
 
@@ -8,6 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .text h3{
@@ -68,6 +69,11 @@
     height:350px;
 }
 
+.car_images{
+    height: 400px;
+    width: 530px;
+}
+
 .pick_desc{
     height: 410px;
     width: 350px;
@@ -113,7 +119,6 @@
     padding: 15px;
     width: 350px;
     margin-top: 10px;
-    border-radius: 3px;
     box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
     transition: all 0.3s;
 }
@@ -121,4 +126,63 @@
 .reserve_btn:hover {
     box-shadow: 0 10px 15px 0 rgb(255 83 48 / 50%);
     background-color: #fa4226;
+}
+
+
+
+@media (max-width:920px){
+    .pick_section{
+        margin-bottom: 100px;
+        margin-top: -200px;
+    }
+
+    .pick_container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .pick_box button{
+        width: 90vw;
+    }
+
+    .box_cars{
+        gap:2rem;
+    }
+
+    .pick_desc{
+        height: 410px;
+        width: 300px;
+        margin-top: 20px;
+    }
+
+    .reserve_btn{
+        width: 300px;
+    }
+
+    .car_images{
+        height: 280px;
+        width: 400px;
+    }
+}
+
+
+@media (max-width:468px){
+    .pick_section{
+        height: 190vh;
+        padding: 0;
+        margin-top: 100px;
+    }
+    .text p{
+        width: 350px;
+    }
+    .car_images{
+        height: 230px;
+        width: 350px;
+    }
+    
+    .box_cars{
+        display: flex;
+        flex-direction: column;
+        gap:0;
+    }
 }
