--- a/components/CommonBanner/CommonBanner.module.css
+++ b/components/CommonBanner/CommonBanner.module.css
@@ -9,7 +9,20 @@
 }
 
 
-.commonBanner span{
+.commonBanner .phone_number{
     color: #FF4D30;
     margin-left: 40px;
+}
+
+@media (max-width:920px){
+    .commonBanner h1{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap:1rem;
+    }
+    
+    .commonBanner .phone_number{
+        margin-left: 0;
+    }
 }
