--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -53,3 +53,47 @@
     width: 55px;
     color: #848484;
 }
+
+@media (max-width:920px) {
+    .about{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width:468px){
+    .about{
+        text-align: center;
+        margin-top: 250px;
+        gap: 1.5rem;
+        height: auto;
+    }
+
+    .people_img{
+        height:300px;
+        width: 300px;
+    }
+
+    .about_text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .adventure{
+        width: 400px;
+        font-size: 35px;
+    }
+
+    .about_icon_container{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .about_icon div{
+        display: flex;
+        flex-direction: column;
+    }
+}
